<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBlue">

    <!-- title animated -->
    <com.example.luizaweatherapp.animation.TypeWriter
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/how_is_today"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />

    <!-- description-->
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/judson"
        android:text="@string/let_s_check_it_out"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- button -->
    <Button
        android:id="@+id/btnGo"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/judson"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/mainBlue"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_details" />
</RelativeLayout>